--- a/app/templates/components/framework-validation.hbs
+++ b/app/templates/components/framework-validation.hbs
@@ -29,5 +29,5 @@
 	<div class="form-group col-sm-8">
 		<button {{action "checkValue" on="click"}}>Route Action</button>
 	</div>
-	{{input type="button" class="form-group btn btn-primary col-sm-5" value="Submit" disabled=validationFlag}}
+	{{input type="submit" class="form-group btn btn-primary col-sm-5" value="Submit" disabled=validationFlag}}
 </form>
