--- a/app/templates/components/framework-validation.hbs
+++ b/app/templates/components/framework-validation.hbs
@@ -4,8 +4,10 @@
 	</div>
 	<div class="form-group col-sm-8 {{if errors.title 'has-error'}}">
 		<label for="">Title: {{formType}}</label>
-		{{input class="form-control" name="inpText" type="text" value=detailObj.title}}
-		<span class="help-block">{{errors.title}}</span>
+		{{input class="form-control" name="inpText" type="text" value=detailObj.title focus-out="validateTitle"}}
+		{{#each errors.title as |errorTitle|}}
+			<span class="help-block">{{errorTitle.message}}</span>
+		{{/each}}
 	</div>
 
 	<div class="form-group col-sm-8 {{if errors.email 'has-error'}}">
@@ -29,5 +31,5 @@
 	<div class="form-group col-sm-8">
 		<button {{action "checkValue" on="click"}}>Route Action</button>
 	</div>
-	{{input type="submit" class="form-group btn btn-primary col-sm-5" value="Submit" disabled=validationFlag}}
+	{{input type="submit" class="form-group btn btn-primary col-sm-5" value="Submit" disabled=submitFlag}}
 </form>
